add headers / try first image

--- a/the_book.html
+++ b/the_book.html
@@ -123,13 +123,78 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </div>
 </div>
 <p>The <code>echo: false</code> option disables the printing of code (only output is displayed).</p>
-<p><font size="18"> <strong>The Book</strong> <font></font></font></p><font size="18"><font>
+<h1 style="text-align: center; font-size:25pt">
+<strong>The Book</strong>
+</h1>
+<h4 style="text-align: center; font-size:11pt" class="anchored">
+<em>By Sam Assaf</em>
+</h4>
+</section>
+<section id="outline" class="level1 unnumbered">
+<h1 class="unnumbered">Outline</h1>
 <ul>
-<li>still need to center this</li>
+<li><a href="#abstract-example-:-analysts-&amp;-coaches">Abstract &amp; Example : Analysts &amp; Coaches</a></li>
+<li><a href="#introduction-:-analysts-&amp;-coaches">Introduction : Analysts &amp; Coaches</a></li>
+<li><a href="#problem-framing-:-analysts">Problem Framing : Analysts</a></li>
+<li><a href="#related-works-:-analysts">Related works : Analysts</a></li>
+<li><a href="#data-overview-:-analysts">Data Overview : Analysts</a>
+<ul>
+<li><a href="#variables-in-model-:-analysts-&amp;-coaches">Variables in Model : Analysts &amp; Coaches</a></li>
+<li><a href="#data-visualization-:-analysts-&amp;-coaches">Data Visualization : Analysts &amp; Coaches</a></li>
+</ul></li>
+<li><a href="#methods-:-analysts">Methods : Analysts</a>
+<ul>
+<li><a href="#model-adjustments-:-analysts-&amp;-coaches">Model Adjustments : Analysts &amp; Coaches</a></li>
+</ul></li>
+<li><a href="#discussion-:-analysts-&amp;-coaches">Discussion : Analysts &amp; Coaches</a></li>
+<li><a href="#examples-plots-/-situation-:-analysts-&amp;-coaches">Examples Plots / Situation : Analysts &amp; Coaches</a></li>
+<li><a href="#conclusion-and-future-work-:-analysts-&amp;-coaches">Conclusion and Future Work : Analysts &amp; Coaches</a></li>
 </ul>
-</font></font></section><font size="18"><font>
+</section>
+<section id="abstract-example-analysts-coaches" class="level1 unnumbered">
+<h1 class="unnumbered">Abstract &amp; Example : Analysts &amp; Coaches</h1>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="~/Desktop/MSBA-SA/The%20Book%20Project%20v_3/Final%20Submission/Game%20Prediction/Tile%20Visualizations%2005%20Yardline%20Cat%20Binary%20Play%20Type%20Diff%20Go%20or%20Not%20Go/4th%20Quarter%20:%207%20-%204%20minutes%20left%20:%20Losing%20by%203%20to%20tied.png" class="img-fluid figure-img"></p>
+<figcaption>Page of <em>The Book</em> according to the game siutation</figcaption>
+</figure>
+</div>
+</section>
+<section id="introduction-analysts-coaches" class="level1 unnumbered">
+<h1 class="unnumbered">Introduction : Analysts &amp; Coaches</h1>
+</section>
+<section id="problem-framing-analysts" class="level1 unnumbered">
+<h1 class="unnumbered">Problem Framing : Analysts</h1>
+</section>
+<section id="related-works-analysts" class="level1 unnumbered">
+<h1 class="unnumbered">Related works : Analysts</h1>
+</section>
+<section id="data-overview-analysts" class="level1 unnumbered">
+<h1 class="unnumbered">Data Overview : Analysts</h1>
+<section id="variables-in-model-analysts-coaches" class="level2 unnumbered">
+<h2 class="unnumbered anchored" data-anchor-id="variables-in-model-analysts-coaches">Variables in Model : Analysts &amp; Coaches</h2>
+</section>
+<section id="data-visualization-analysts-coaches" class="level2 unnumbered">
+<h2 class="unnumbered anchored" data-anchor-id="data-visualization-analysts-coaches">Data Visualization : Analysts &amp; Coaches</h2>
+</section>
+</section>
+<section id="methods-analysts" class="level1 unnumbered">
+<h1 class="unnumbered">Methods : Analysts</h1>
+<section id="model-adjustments-analysts-coaches" class="level2 unnumbered">
+<h2 class="unnumbered anchored" data-anchor-id="model-adjustments-analysts-coaches">Model Adjustments : Analysts &amp; Coaches</h2>
+</section>
+</section>
+<section id="discussion-analysts-coaches" class="level1 unnumbered">
+<h1 class="unnumbered">Discussion : Analysts &amp; Coaches</h1>
+</section>
+<section id="examples-plots-situation-analysts-coaches" class="level1 unnumbered">
+<h1 class="unnumbered">Examples Plots / Situation : Analysts &amp; Coaches</h1>
+</section>
+<section id="conclusion-and-future-work-analysts-coaches" class="level1 unnumbered">
+<h1 class="unnumbered">Conclusion and Future Work : Analysts &amp; Coaches</h1>
+</section>
 
-</font></font></main><font size="18"><font>
+</main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
@@ -521,9 +586,9 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
-</font></font></div><font size="18"><font> <!-- /content -->
+</div> <!-- /content -->
 
 
 
 
-</font></font></body></html>
+</body></html>
